--- a/packages/pdf-editor/package.json
+++ b/packages/pdf-editor/package.json
@@ -50,7 +50,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@jmt-code/pdf-creator": "^0.1.0"
+    "@jmt-code/pdf-creator": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
